tomcat fix